add node version

--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         uses: withastro/action@v0
         with:
           path: '/cosmic-corot'
+          node-version: 18
         # with:
             # path: . # The root location of your Astro project inside the repository. (optional)
             # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
